force-app/main/default/objects/MUSW__Alert__c/MUSW__Alert__c.object-meta.xml
<CustomObject>
    <description>Alert is an indication on a record if there are any restrictions/warnings for workflows on the record.</description>
    <label>Alert</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>