force-app/main/default/objects/MUSW__Alert__c/fields/MUSW__Apply_To__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Apply_To__c</fullName>
    <label>Apply To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Record</fullName>
                <default>true</default>
                <label>Current Record</label>
            </value>
            <value>
                <fullName>Fields</fullName>
            </value>
            <value>
                <fullName>Current Record and Related Objects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>