force-app/main/default/objects/MUSW__Alert__c/fields/MUSW__External_Message__c.field-meta.xml
<CustomField>
    <fullName>MUSW__External_Message__c</fullName>
    <description>External Message for Alert</description>
    <label>External Message</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>