force-app/main/default/objects/MUSW__Alert__c/fields/MUSW__Metadata__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Metadata__c</fullName>
    <description>a meta data field that carries extra alert information like fields to block and values to block</description>
    <label>Metadata</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>