force-app/main/default/objects/MUSW__Alert__c/fields/MUSW__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Record_Id__c</fullName>
    <description>Id to the record this alert needs to be associated with.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>