force-app/main/default/objects/MUSW__Alert__c/fields/MUSW__Status__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status__c</fullName>
    <description>Status for this alert.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>